# AI-TadPole-OS

./: .dockerignore  .env.example  .env.schema  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  Dockerfile.linux  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  audit_ai_awakening_v2.cjs  audit_output.txt  audit_report_v2.txt  audit_results.txt  deploy-bunker-1.ps1  deploy-bunker-2.ps1  deploy-bunker-ghcr.ps1  docker-compose.yml  eslint.config.js  final_audit.txt  fresh-test-results.json  full_test_results.txt  git-sync.ps1  git_log.txt  git_status.txt  index.html  job_atomic_update.json  job_update.json  launch_mission.py  lint_detail.txt  lint_errors.txt  lint_full.txt  lint_results.txt  manual_mission.json  (+41 more)
.agent/: ARCHITECTURE.md  mcp_config.json
.cargo/: config.toml
.github/: dependabot.yml
.tmp/: local-build-fallback.ps1
data/: debug_sector_fault.py  dump.sql  extract_data.py  recovered_data.sql  tadpole.db.fatal_broken  test_ws.py
directives/: FAULT_REGISTRY.md  GEMINI.md  IDENTITY.md  LONG_TERM_MEMORY.md  api_documentation.md  burn_rate_forecast.md  campaign_launch.md  ci_cd_pipeline.md  client_onboarding.md  competitive_audit.md  compliance_check.md  customer_incident_review.md  database_migration.md  deep_analysis.md  deploy_to_prod.md  design_system_update.md  documentation_audit.md  documentation_policy.md  emergency_shutdown.md  engagement_report.md  feature_roadmap.md  feedback_collection.md  finance_review.md  free_launch_plan.md  incident_response.md  launch_plan.md  legal_filing.md  market_research.md  market_trend_analysis.md  neural_handoff.md  newsletter_draft.md  ops_review.md  orchestrate.md  pipeline_management.md  pipeline_optimization.md  policy_review.md  product_sync.md  prototype_review.md  quality_gate_review.md  quarterly_forecasting.md  (+14 more)
docs/: API_CONTRACT.md  API_REFERENCE.md  ARCHITECTURE.md  CLI_TOOLS.md  (+33 more)
server-rs/: .env.example  API_REFERENCE.md  Cargo.toml  benchmark_results.json  check_errors.txt  check_errors2.txt  check_errors3.txt  clippy_errors.txt  clippy_errors_utf8.txt  clippy_output.txt  compile_check_final.txt  compile_check_final_v2.txt  compile_errors.txt  current_check_errs.txt  final_check_errs.txt  final_check_v3.txt  final_check_v4.txt  lifecycle_test.txt  lifecycle_test_v2.txt  macro_check_errs.txt  mock_llm_responses.json  out.txt  output.txt  test_fs.rs  test_output_compilation.txt  test_results.txt  test_results_v2.txt  test_results_v3.txt  test_results_v4.txt  test_results_v5.txt  test_results_v6.txt  tests_errors.txt
server-rs/.cargo/: config.toml
server-rs/data/skills/codebase/: skill.json
server-rs/data/skills/filesystem/: skill.json
server-rs/data/skills/research/: skill.json
server-rs/data/skills/swarm/: skill.json
server-rs/data/skills/web_search/: skill.json
server-rs/examples/: debug_quotas.rs
server-rs/migrations/: 20260515000200_sync_manifest_telemetry.sql  20260516000100_add_mission_logs_hash.sql
server-rs/scratch/: inject_agent.sql
server-rs/server-rs-macros/src/: lib.rs
server-rs/src/: bridge.rs  db.rs  db_tests.rs  env_schema.rs  error.rs  main.rs  router.rs  secret_redactor.rs  startup.rs  state.rs  telemetry.rs
server-rs/src/adapter/: discord.rs  filesystem.rs  mod.rs  tests_filesystem.rs  vault.rs
server-rs/src/agent/: anthropic.rs  archival.rs  audio.rs  audio_cache.rs  backlog.rs  benchmarks.rs  capabilities.rs  capability_matrix.rs  connectors.rs  constants.rs  context_manager.rs  gemini.rs  groq.rs  hooks.rs  mcp.rs  mcp_tests.rs  memory.rs  merge.rs  mission.rs  mod.rs  null_provider.rs  openai.rs  parser.rs  persistence.rs  provider_trait.rs  rate_limiter.rs  rates.rs  reaper.rs  recipes.rs  registry.rs  sanitizer.rs  script_skills.rs  skill_manifest.rs  test_oversight.rs  test_sanitizer.rs  tests_capabilities.rs  tests_governance.rs  tests_graph.rs  tests_rate_limiter.rs  tests_skills.rs  (+2 more)
server-rs/src/agent/continuity/: executor.rs  mod.rs  scheduler.rs  types.rs  workflow.rs
server-rs/src/agent/mcp/: client.rs  mod.rs  registry.rs
server-rs/src/agent/runner/: analysis.rs  context.rs  evolution_tools.rs  external_tools.rs  finalize.rs  fs_tools.rs  intelligence.rs  lifecycle.rs  metrics_tools.rs  mission_tools.rs  mod.rs  oversight.rs  prompt_renderer.rs  provider.rs  refinement.rs  service_traits.rs  swarm.rs  swarm_persistence.rs  synthesis.rs  tools.rs  workflow.rs
server-rs/src/agent/runner/synthesis/: context.rs  encoder.rs  fragments.rs  mod.rs  pruner.rs  toolbelt.rs
server-rs/src/agent/runner/tools/: capability.rs  dispatcher.rs  error.rs  macros.rs  manifest.rs  mod.rs  registry.rs  security.rs  trait_tool.rs
server-rs/src/middleware/: auth.rs  auth_rate_limit.rs  cors.rs  deprecation.rs  mod.rs  rate_limit.rs  request_id.rs  security_headers.rs
server-rs/src/networking/: mod.rs  resolver.rs
server-rs/src/routes/: agent.rs  agent_tests.rs  audio.rs  auth_tests.rs  benchmarks.rs  capabilities.rs  continuity.rs  deploy.rs  docs.rs  engine_control.rs  env_schema.rs  error.rs  governance.rs  health.rs  mcp.rs  mcp_test.rs  memory.rs  mod.rs  model_manager.rs  nodes.rs  oversight.rs  pagination.rs  skills.rs  system.rs  templates.rs  ws.rs  ws_tests.rs
server-rs/src/security/: audit.rs  metering.rs  mod.rs  monitoring.rs  permission_tests.rs  permissions.rs  scanner.rs
server-rs/src/services/: acl_service.rs  blueprint_service.rs  discovery.rs  mod.rs  privacy.rs  tests.rs
server-rs/src/state/: mod.rs
server-rs/src/state/hubs/: comm.rs  gov.rs  mod.rs  reg.rs  res.rs  sec.rs
server-rs/src/system/: mod.rs  profiler.rs
server-rs/src/telemetry/: aggregator.rs  mod.rs  pulse.rs  pulse_tests.rs  pulse_types.rs  telemetry_layer_tests.rs
server-rs/src/types/: mod.rs  rag_scoring.rs
server-rs/src/utils/: data_weighting.rs  graph.rs  mod.rs  parser.rs  security.rs  serialization.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
wasm-codec/: Cargo.toml
wasm-codec/src/: lib.rs
(+929 files in other folders)
