[package]
name = "server-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Web Framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tower = { version = "0.4", features = ["util", "make"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Environment Variables
dotenvy = "0.15"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = { version = "0.21.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.21.0", features = ["trace"] }
tracing-opentelemetry = "0.22.0"
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }

# HTTP Client (for Gemini API)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }

# Process / System
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
dashmap = "6.0"
parking_lot = "0.12"
sysinfo = "0.30"
# Database Persistence
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "sqlite", "chrono", "json", "migrate" ] }
cron = "0.12"
once_cell = "1.21.3"
regex = "1.10"
async-trait = "0.1"
tiktoken-rs = "0.5"
sha2 = "0.10"

# Hydra-RS: Code Intelligence Dependencies
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
ignore = "0.4"
streaming-iterator = "0.1"
md5 = "0.7"
walkdir = "2.5"
lancedb = "0.26.2"
arrow-schema = "57.3.0"
arrow-array = "57.3.0"

# Audio & Neural Engine
ort = { version = "2.0.0-rc.9" }
hound = "3.5"
ndarray = "0.15"
whisper-rs = { version = "0.11", optional = true } 
hex = "0.4.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = 'abort'
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

[dev-dependencies]
tempfile = "3.14"
tokio-tungstenite = "0.21"
tungstenite = "0.21"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
