[package]
name = "tadpole-os"
version = "1.1.57"
description = "Tadpole OS Desktop App"
authors = ["DDS-Solutions"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = { version = "0.9.4", features = ["os_rng"] }
dotenvy = "0.15"

[target.'cfg(target_os = "linux")'.dependencies]
glib = "0.22.5"



[profile.release]
panic = "abort" # Strip expensive panic hook
codegen-units = 1 # Better optimizations
opt-level = "s" # Optimize for binary size
lto = true # Enable Link Time Optimization
