[package]
name = "wasm-codec"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.9.4", features = ["os_rng"] }
postcard = { version = "1.0", features = ["alloc"] }

